# misinformation_spread

./: .gitignore  README.md  pyproject.toml
code/: Network.ipynb  README.md  analyze_results.py  batch_simulation.py  compare_experiments.py  config.json  config_facebook.json  create_network.py  requirements.txt  run_simulation.py  simulation.py  visualize_network.py
code/config/: config.json  config_facebook.json  config_generate_network.json  config_sim_bot.json  config_sim_general.json  config_sim_influencer.json
code/snlearn/: __init__.py  agent.py  draw_network.py  simulation.py  socialnetwork.py
data/: facebook_community_100nodes_seed42.pkl
paper/: intro.tex  main.tex  model.tex  outcome.tex  package.tex
